unpackaged/main/default/objects/ServiceResource/fields/Van_Status__c.field-meta.xml
<CustomField>
    <fullName>Van_Status__c</fullName>
    <label>Van Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspect Old</fullName>
            </value>
            <value>
                <fullName>Aspect New</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>