unpackaged/main/default/objects/ServiceResource/fields/Varification_No__c.field-meta.xml
<CustomField>
    <fullName>Varification_No__c</fullName>
    <description>Confirmation from Inland revenue. Required for Crystal Tax.</description>
    <label>Varification No</label>
    <length>12</length>
    <type>Text</type>
</CustomField>