unpackaged/main/default/objects/ServiceResource/fields/VAT_Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registered_Number__c</fullName>
    <label>VAT Registered Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>