unpackaged/main/default/objects/ServiceResource/fields/VCR__c.field-meta.xml
<CustomField>
    <fullName>VCR__c</fullName>
    <label>VCR Trained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Training</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>