unpackaged/main/default/objects/ServiceResource/fields/Visitour_Engineer_ID__c.field-meta.xml
<CustomField>
    <fullName>Visitour_Engineer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Visitour Engineer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>