unpackaged/main/default/objects/ServiceResource/validationRules/Email_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_cannot_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
    <errorMessage>Please ensure you add an Email address when creating a Service Resource or several processes will all break.  Please wait until you have the email before adding.</errorMessage>
</ValidationRule>