unpackaged/main/default/objects/ServiceResource/validationRules/Estimate_Limit_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimate_Limit_cannot_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Estimate_Limit__c ) =TRUE</errorConditionFormula>
    <errorMessage>Each Operative/Service Resource must have a value for Estimate Limit</errorMessage>
</ValidationRule>