unpackaged/main/default/objects/ServiceResource/validationRules/Franchisee_Payment_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Franchisee_Payment_info</fullName>
    <active>false</active>
    <description>this is to stop people entering in bank details when Service Resources aren&#39;t Franchisee&#39;s</description>
    <errorConditionFormula>AND(ISPICKVAL( Engineer_Role__c ,&quot;Franchisee&quot;),NOT(OR(ISNULL(Bank_Account_Number__c ),ISNULL( Sort_Code__c ))))</errorConditionFormula>
    <errorMessage>The Account Number and Sort Code can only be entered for Franchisee&#39;s</errorMessage>
</ValidationRule>