unpackaged/main/default/objects/ServiceResource/validationRules/Mobile_Phone_Cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Phone_Cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Mobile_No__c )</errorConditionFormula>
    <errorMessage>Every Service Resource MUST have a mobile phone number or many processes will break</errorMessage>
</ValidationRule>