unpackaged/main/default/objects/ServiceResource/listViews/All_In_Active_Service_Resources.listView-meta.xml
<ListView>
    <fullName>All_In_Active_Service_Resources</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All In-Active Service Resources</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>