unpackaged/main/default/objects/ServiceResource/listViews/All_Service_Resources_Lightning.listView-meta.xml
<ListView>
    <fullName>All_Service_Resources_Lightning</fullName>
    <columns>CreatedDate</columns>
    <columns>IsActive</columns>
    <columns>Trade_Group__c</columns>
    <columns>Name</columns>
    <columns>Qualifying_WTs_Count__c</columns>
    <columns>Rate_of_Pay_Tier__c</columns>
    <columns>Estimate_Limit__c</columns>
    <columns>Shift_Pattern__c</columns>
    <columns>Allocated_to_Manager__c</columns>
    <columns>Mobile_No__c</columns>
    <columns>Residential_PostalCode__c</columns>
    <columns>Postcode_for_schedule_STM__c</columns>
    <columns>ST_Membership__c</columns>
    <columns>Email__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Resources</label>
</ListView>