unpackaged/main/default/objects/ServiceResource/listViews/Gas_All_Active_SR.listView-meta.xml
<ListView>
    <fullName>Gas_All_Active_SR</fullName>
    <columns>Name</columns>
    <columns>Residential_PostalCode__c</columns>
    <columns>Postcode_for_schedule_STM__c</columns>
    <columns>ResourceType</columns>
    <columns>Trade__c</columns>
    <columns>Rate_of_Pay_Tier__c</columns>
    <columns>Qualifying_WTs_Count__c</columns>
    <columns>Allocated_to_Manager__c</columns>
    <columns>Mobile_No__c</columns>
    <columns>Phone__c</columns>
    <columns>Months_Since_Start_Date__c</columns>
    <columns>New_Rates__c</columns>
    <columns>Skill_Set__c</columns>
    <columns>CreatedDate</columns>
    <columns>Trade_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade__c</field>
        <operation>includes</operation>
        <value>Drainage (Soil Water),Drainage (Wastewater),Heating &amp; Hot Water (Commercial),Heating &amp; Hot Water (Domestic),Plumbing &amp; Cold Water</value>
    </filters>
    <label>Gas - All Active SR</label>
</ListView>