unpackaged/main/default/objects/ServiceResource/listViews/Inactive_Service_Resources.listView-meta.xml
<ListView>
    <fullName>Inactive_Service_Resources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>IsOptimizationCapable</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Service Resources</label>
</ListView>