unpackaged/main/default/objects/ServiceResource/listViews/Real_Time_Engineer_Payslip.listView-meta.xml
<ListView>
    <fullName>Real_Time_Engineer_Payslip</fullName>
    <columns>Name</columns>
    <columns>Engineer_Real_Time_Payslip_URL__c</columns>
    <filterScope>Mine</filterScope>
    <label>Real Time Engineer Payslip</label>
</ListView>